# 401-python-drf-api

./: README.md  pyproject.toml
API_project/: db.sqlite3
API_project/API_project/: settings.py  urls.py
API_project/note/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
API_project/note/migrations/: 0001_initial.py
